# agent-memory-skill

./: .gitignore  Dockerfile  README.md  SKILL.md  docker-compose.yaml  example.py  mcp_server.py  pyproject.toml  test_basic.py
.sisyphus/plans/: agent-memory-improvements-continued.md  agent-memory-improvements.md  agent-memory-skill.md
agent_memory/: __init__.py  core.py  embeddings.py  server.py  storage.py
evals/: evals.json  trigger_evals.json
logos/: README.md
tests/: conftest.py  test_core.py  test_embeddings.py  test_integration.py  test_server.py  test_storage.py
