[project]
name = "agent-memory"
version = "1.0.0"
description = "Redis-based semantic memory skill for AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis>=5.0.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "fakeredis>=2.20.0",
]

[project.scripts]
agent-memory = "agent_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
index-url = "https://pypi.org/simple"

[tool.uv.pip]
system = true